# tex2hs

./: Check.hs  Fragment.hs  Main.hs  README.md  push.bat  sample.tex  tex2hs.cabal
Haskell/: Provides.hs  Tweak.hs
Latex/: Parser.hs
